Added draft for OAuth2 UI

--- a/docs/de-de/modules/maerkte/pages/etsy.adoc
+++ b/docs/de-de/modules/maerkte/pages/etsy.adoc
@@ -71,9 +71,12 @@ Bevor du Etsy in plentymarkets einrichtest, muss bei Etsy im Menü *Shop-Manager
 [#250a]
 === Schnittstelle freischalten
 
+[#konto-freischalten]
+==== Etsy-Konto freischalten
+
 Im Menü *Einrichtung » Märkte » Etsy » Authentifizierung* muss zunächst die Schnittstelle freigeschaltet werden. Damit gibst du plentymarkets Zugriff auf dein Etsy-Konto.
 
-* Aufträge werden immer dem Standard-Mandanten zugeordnet.
+*_Hinweis:_* Aufträge werden immer dem Standard-Mandanten zugeordnet.
 
 [.instruction]
 Schnittstelle freischalten:
@@ -89,6 +92,18 @@ Schnittstelle freischalten:
 → Du kannst weitere Einstellungen vornehmen. +
 *_Fehlerbehebung:_* Du wirst auf die Startseite deines plentyShops weitergeleitet? +
   ** Wahrscheinlich ist dein plentyShop gesperrt. Entsperre den plentyShop im Menü *Einrichtung » Mandant » Global » Webshop » Shop sperren*. Vergiss nicht, den plentyShop wieder zu sperren, wenn die Authentifizierung abgeschlossen ist.
+
+[#oauth2]
+==== OAuth2 freischalten
+
+Authentifiziere anschließend im Menü *Einrichtung » Märkte » Etsy » OAuth2* dein Etsy-Konto für OAuth2. Die Authentifizierung wird benötigt, damit Daten zwischen plentymarkets und Etsy ausgetauscht werden können.
+
+. Öffne das Menü *Einrichtung » Märkte » Etsy » OAuth2*.
+. Klicke auf das Weltkugel-Symbol (icon:globe[role="green"]). +
+→ Ein neues Fenster wird geöffnet und du wirst zu Etsy weitergeleitet. +
+*_Fehlerbehebung:_* Du wirst nicht weitergeleitet? +
+  ** Deaktiviere deinen Popup-Blocker oder verwende einen anderen Browser.
+. Gib den Namen deines Etsy-Shops ein.
 
 [#300]
 === Datenaustausch aktivieren
