CHANGE information about exporting asin, epid, moin

--- a/docs/de-de/modules/daten/pages/formatdesigner-artikel.adoc
+++ b/docs/de-de/modules/daten/pages/formatdesigner-artikel.adoc
@@ -1594,31 +1594,72 @@ Für den Export von Marktplatzverfügbarkeiten stehen die in <<tabelle-felder-ma
 [#1800]
 == VariationMarketIdentNumber
 
-Für den Export von ASIN und ePID stehen die in <<tabelle-felder-asin-epid>> aufgelisteten Felder zur Verfügung.
+Die folgenden Felder werden für den Export von ASINs und ePIDs verwendet.
 
-[[tabelle-felder-asin-epid]]
-.Felder für Export von ASIN und ePID
-[cols="1,3"]
-|===
-|Feld |Erläuterung
+=== countryId
 
-|countryId
-|ID des Landes
+Gibt die ID des Landes an.
+Das heißt, dieses Feld gibt die Länderplattform an, z.B. Amazon Deutschland, eBay Frankreich, eBay UK, usw.
 
-|id
-|ID der ASIN. Diese ID brauchst du, wenn du xref:daten:elasticSync-artikel.adoc#2430[ASINs mit Hilfe des Import-Tools löschen] möchtest. Die ID ist im plentymarkets Backend nicht sichtbar.
+Die Länder-IDs findest du als xref:daten:interne-IDs.adoc#20[Liste im Handbuch] oder im Menü *Einrichtung » Aufträge » Versand » Optionen » Tab: Lieferländer*.
 
-|position
-|Position der ASIN. Die Position ist im plentymarkets Backend nicht sichtbar.
-
-|type
-|Typ (ASIN oder ePID)
-
-|value
-|Wert
-|===
+[TIP]
+Klicke auf icon:sign-in[role="darkGrey"] und wähle den passenden Markt.
 
 '''
+=== id
+
+Gibt die interne ID der ASIN oder ePID an.
+
+Entspricht der Option im Menü: *Artikel » Artikel-UI » [Variante öffnen] » Element: ASIN/ePID/MOIN » Spalte: ID*.
+
+*_Anwendungsfall_*:
+Die ID brauchst du, wenn du xref:daten:elasticSync-artikel.adoc#2430[ASINs oder ePIDs mit Hilfe des Import-Tools löschen] möchtest.
+
+[TIP]
+Klicke auf icon:sign-in[role="darkGrey"] und wähle den passenden Markt.
+
+'''
+=== position
+
+Gibt die Positionsnummer der ASIN oder ePID an.
+
+Entspricht der Option im Menü: *Artikel » Artikel-UI » [Variante öffnen] » Element: ASIN/ePID/MOIN » Spalte: Position*.
+
+[TIP]
+Klicke auf icon:sign-in[role="darkGrey"] und wähle den passenden Markt.
+
+'''
+=== type
+
+Gibt den Typ an, d.h. ob es sich um eine ASIN oder eine ePID handelt.
+
+[cols="1,1"]
+|===
+|Wert in der Exportdatei |Bedeutung
+
+|`ASIN`
+|Es handelt sich um eine ASIN.
+
+|`EPID`
+|Es handelt sich um eine EPID.
+|===
+
+Entspricht der Option im Menü: *Artikel » Artikel-UI » [Variante öffnen] » Element: ASIN/ePID/MOIN » Spalte: Typ*.
+
+[TIP]
+Klicke auf icon:sign-in[role="darkGrey"] und wähle den passenden Markt.
+
+'''
+=== value
+
+Gibt die eigentliche ASIN oder ePID an, d.h. die numerische oder alphanumerische Produktkennzeichnung.
+
+Entspricht der Option im Menü: *Artikel » Artikel-UI » [Variante öffnen] » Element: ASIN/ePID/MOIN » Spalte: Wert*.
+
+[TIP]
+Klicke auf icon:sign-in[role="darkGrey"] und wähle den passenden Markt.
+
 [#1900]
 == VariationProperty
 
