--- a/docs/de-de/modules/daten/pages/elasticSync-artikel.adoc
+++ b/docs/de-de/modules/daten/pages/elasticSync-artikel.adoc
@@ -2945,7 +2945,7 @@ Das Ergebnis des Imports findest du im Backend im Menü: xref:artikel:import-exp
 [#1850]
 ==== Position
 
-Gib eine Positionsnummer in die CSV-Datei ein.
+Gib die Positionsnummer der ASIN, ePID oder MOIN in die CSV-Datei ein.
 
 *_Standardwert_*: Kein Standardwert
 
@@ -2959,7 +2959,7 @@ Das Ergebnis des Imports findest du im Backend im Menü: xref:artikel:import-exp
 
 icon:warning[role="red"] Dieses Feld ist eine Pflichtangabe beim Importieren von ASINs, ePIDs oder MOINs.
 
-Gib die ASIN, ePID oder MOIN in deine CSV-Datei ein.
+Gib die eigentliche ASIN, ePID oder MOIN in deine CSV-Datei ein.
 
 *_Standardwert_*: Kein Standardwert
 
@@ -2972,9 +2972,11 @@ Das Ergebnis des Imports findest du im Backend im Menü: xref:artikel:import-exp
 ==== Löschen (IDs, kommasepariert)
 
 Möchtest du einige ASINs, ePIDs oder MOINs von einer Variante entfernen?
-Gib die IDs der zu entfernenden ASINs, ePIDs oder MOINs in die CSV-Datei ein.
+Gib die interne IDs der zu entfernenden ASINs, ePIDs oder MOINs in die CSV-Datei ein.
 Verwende Kommas, um die IDs zu trennen.
-Die IDs findest du im Menü *Artikel » Artikel-UI » [Variante öffnen] » Element: ASIN/ePID/MOIN*.
+
+Die interne IDs findest du im Menü *Artikel » Artikel-UI » [Variante öffnen] » Element: ASIN/ePID/MOIN*.
+Alternativ kannst du die xref:daten:formatdesigner-artikel.adoc#1800[IDs exportieren].
 
 *_Standardwert_*: Kein Standardwert
 
