--- a/docs/en-gb/modules/data/pages/elasticSync-item.adoc
+++ b/docs/en-gb/modules/data/pages/elasticSync-item.adoc
@@ -2945,7 +2945,7 @@ You can find the result of the import in the back end menu: xref:item:managing-i
 [#1850]
 ==== Position
 
-Enter a position number in the CSV file.
+Enter the ASIN, ePID or MOIN's position number into the CSV file.
 
 *_Default value_*: No default value
 
@@ -2959,7 +2959,7 @@ You can find the result of the import in the back end menu: xref:item:managing-i
 
 icon:warning[role="red"] This field is mandatory when importing ASINs, ePIDs or MOINs.
 
-Enter the ASIN, ePID or MOIN into your CSV file.
+Enter the actual ASIN, ePID or MOIN into your CSV file.
 
 *_Default value_*: No default value
 
@@ -2972,9 +2972,11 @@ You can find the result of the import in the back end menu: xref:item:managing-i
 ==== Delete (IDs, comma-separated)
 
 Do you want to remove some of the ASINs, ePIDs or MOINs from a variation?
-Enter the IDs of the ASINs, ePIDs or MOINs that should be removed in the CSV file.
+Enter the internal IDs of the ASINs, ePIDs or MOINs that should be removed in the CSV file.
 Use commas to separate the IDs.
-You can find the IDs in the menu *Item » Item UI » [Open variation] » Element: ASIN/ePID/MOIN*.
+
+You can find the internal IDs in the menu *Item » Item UI » [Open variation] » Element: ASIN/ePID/MOIN*.
+Alternatively, you can xref:data:formatdesigner-item.adoc#1800[export the IDs].
 
 *_Default value_*: No default value
 
