--- a/docs/de-de/modules/daten/pages/elasticSync-hersteller.adoc
+++ b/docs/de-de/modules/daten/pages/elasticSync-hersteller.adoc
@@ -137,6 +137,8 @@ include::artikel:partial$land.adoc[]
 [#160]
 ==== Pixmania-ID
 
+*_Hinweis:_* Diese Einstellung ist ohne Funktion, da es den Marktplatz PIXmania nicht mehr gibt.
+
 include::artikel:partial$pixmania.adoc[]
 
 '''
