--- a/docs/de-de/modules/daten/pages/formatdesigner-attribute.adoc
+++ b/docs/de-de/modules/daten/pages/formatdesigner-attribute.adoc
@@ -43,16 +43,17 @@ In <<tabelle-felder-attribute>> werden Felder erläutert, die für den Export vo
 |Gibt an, ob der Aufpreis ein Prozentwert ist.
 
 |laRedouteAttribute
-|Das Attribut des Marketplatzes La Redoute, das mit diesem Attribut verknüpft ist
+|Das Attribut des Marktplatzes La Redoute, das mit diesem Attribut verknüpft ist.
 
 |neckermannAtEpAttribute
-|Das Attribut des Marketplatzes Neckermann AT EP, das mit diesem Attribut verknüpft ist
+|Das Attribut des Marktplatzes Neckermann AT EP, das mit diesem Attribut verknüpft ist.
 
 |ottoAttribute
-|Das Attribut des Marketplatzes Otto, das mit diesem Attribut verknüpft ist
+|Das Attribut des Marktplatzes Otto, das mit diesem Attribut verknüpft ist.
 
 |pixmaniaAttribute
-|Das Attribut des Marketplatzes Pixmania, das mit diesem Attribut verknüpft ist
+| *_Hinweis:_* Diese Einstellung ist ohne Funktion, da es den Marktplatz PIXmania nicht mehr gibt. +
+Das Attribut des Marktplatzes Pixmania, das mit diesem Attribut verknüpft ist.
 
 |position
 |Position
