--- a/docs/de-de/modules/daten/pages/formatdesigner-hersteller.adoc
+++ b/docs/de-de/modules/daten/pages/formatdesigner-hersteller.adoc
@@ -71,7 +71,7 @@ include::artikel:partial$neckermann.adoc[]
 include::artikel:partial$telefonnummer.adoc[]
 
 | *pixmaniaBrandId*
-|
+| *_Hinweis:_* Diese Einstellung ist ohne Funktion, da es den Marktplatz PIXmania nicht mehr gibt.
 include::artikel:partial$pixmania.adoc[]
 
 | *position*
