--- a/docs/de-de/modules/daten/pages/hersteller.adoc
+++ b/docs/de-de/modules/daten/pages/hersteller.adoc
@@ -103,7 +103,7 @@ include::artikel:partial$email.adoc[]
 include::artikel:partial$land.adoc[]
 
 | *PixmaniaBrandId*
-|
+| *_Hinweis:_* Diese Einstellung ist ohne Funktion, da es den Marktplatz PIXmania nicht mehr gibt.
 include::artikel:partial$pixmania.adoc[]
 
 | *NeckermannAtEpBrandId*
