Changed data fields for image URLs (#1285)
* Changed data fields for image URLs

* Corrected recommended mapping

* Added translations

* Update Check24 Furniture

--- a/docs/en-gb/modules/markets/partials/check24-furniture-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/check24-furniture-recommended-mappings.adoc
@@ -67,15 +67,13 @@ _or_
 
 * Property linked to variation, type *Whole number*
 
-| Image URL 1
+| Image URLs
 | yes
-| * *Image » Variation images » Single image*, Image information *Full image URL*
+| * *Image » Item images » Image list*, Image information *Full image URL*
 
-| Image URL 2-10
-| no
-| additional images +
-
-* *Image » Variation images » Single image*, image information *Full image URL*
+| Variation image URLs
+| yes
+| * *Image » Variation images » Image list*, Image information *Full image URL*
 
 | Brand
 | no
