--- a/docs/de-de/modules/maerkte/partials/check24-furniture-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/check24-furniture-recommended-mappings.adoc
@@ -67,15 +67,13 @@ _oder_
 
 * Eigenschaft an Variante, Typ *Ganze Zahl*
 
-| Bild-URL 1
+| Bild-URLs
 | ja
-| * *Bild » Varianten Bilder » Einzelbild*, Bildinformation *Vollbild-URL*
+| * *Bild » Artikel Bilder » Bilderliste*, Bildinformation *Vollbild-URL*
 
-| Bild-URL 2-10
-| nein
-| zusätzliche Bilder +
-
-* *Bild » Varianten Bilder » Einzelbild*, Bildinformation *Vollbild-URL*
+| Varianten-Bild-URLs
+| ja
+| * *Bild » Varianten Bilder » Bilderliste*, Bildinformation *Vollbild-URL*
 
 | Marke
 | nein
