--- a/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
@@ -177,7 +177,7 @@ Auftrag oder Angebot über Kontakt anlegen:
 . Öffne das Menü *CRM » Kontakte*.
 . Suche den Kontakt anhand der Filtereinstellungen. Beachte dazu die Erläuterungen zu den Filtern auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen]. +
 → Die Kontakte, die den Suchkriterien entsprechen, werden angezeigt.
-. Klicke in der Zeile des Kontakts ganz links auf material:more_vert[]. +
+. Klicke rechts in der Zeile des Kontakts auf material:more_vert[]. +
 → Eine Auswahl der verfügbaren Optionen wird geöffnet.
 . Navigiere zu material:shopping_cart[] *Aufträge* > *Neuer Auftrag* oder *Neues Angebot*. +
 → Du wirst automatisch zu den Auftragsdetails für den neuen Auftrag bzw. das neue Angebot weitergeleitet.
