ADD external order ID

--- a/docs/de-de/modules/auftraege/pages/design-order-view.adoc
+++ b/docs/de-de/modules/auftraege/pages/design-order-view.adoc
@@ -340,6 +340,10 @@ Diese Spalte ist eine Standardspalte.
 |Zeigt den Versanddiensteister an. +
 Diese Spalte ist eine optionale Spalte.
 
+| *Externe Auftrags-ID*
+|Zeigt die externe ID des Auftrags an. +
+Diese Spalte ist eine optionale Spalte.
+
 |*Aktionen*
 |Zeigt die weiteren Aktionen (material:more_vert[]) an, die für den jeweiligen Auftrag zur Verfügung stehen.
 |===
