--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -300,8 +300,8 @@ Die Standardeinstellung für für die Herkunft ist *0.00 Manuelle Eingabe*.
 | *Zahlungsart*
 |Zeigt die Zahlungsart an. Wähle die gewünschte Zahlungsart aus der Dropdown-Liste. Standardmäßig ist die Option *Vorkasse* vorausgewählt.
 
-| *Externe Auftragsnummer*
-|Zeigt die externe Auftragsnummer an.
+| *Externe Auftrags-ID*
+|Zeigt die externe ID des Auftrags an.
 
 | *Währung*
 |Zeigt die Währung an. +
