--- a/docs/en-gb/modules/orders/pages/working-with-orders.adoc
+++ b/docs/en-gb/modules/orders/pages/working-with-orders.adoc
@@ -300,8 +300,8 @@ The default setting for the referrer is *0.00 Manual entry*.
 | *Payment method*
 |Shows the payment method. Select the desired payment method from the drop-down list. The option *Cash in advance* is selected by default.
 
-| *External order number*
-|Shows the external order number.
+| *External order ID*
+|Shows the external ID of the order.
 
 | *Currency*
 |Shows the currency. +
