--- a/docs/de-de/modules/externe-webshops/pages/spocc.adoc
+++ b/docs/de-de/modules/externe-webshops/pages/spocc.adoc
@@ -25,7 +25,7 @@ Das SPoCC-Plugin verbindet dein SPoCC-System mit plentymarkets.
 * Ergänze bei Bedarf die Artikeldaten in plentymarkets und vertreibe deine Produkte dann auf verschiedenen Marktplätzen, Vertriebskanälen und Webshops.
 * Exportiere Auftragsdaten an SPoCC.
 
-NOTE: Diese Anleitung ist das Richtige für dich, wenn du SPoCC-Kund:in bist, aber noch kein plentymarkets System im produktiven Einsatz hast.
+NOTE: Diese Anleitung ist das Richtige für dich, wenn du SPoCC-Kund:in bist, aber plentymarkets noch nicht produktiv nutzt.
 Du verwendest plentymarkets schon und möchtest SPoCC nutzen? Dann wende dich an unser Einrichtungsteam.
 
 [#data-exchange]
@@ -58,12 +58,14 @@ SPoCC-Attribute in Eigenschaften
 | * Vollständiger Import alle 24 Stunden
 * Geänderte Daten alle 15 Minuten
 
-| Export von Aufträgen zu SPoCC: +
+| Export von Aufträgen zu SPoCC:
+
 * Bestellung anlegen, anmelden, Bestand reservieren
 * Auftrag aktualisieren wenn ready4shipping
 | Bei Auslösen der Ereignisaktion
 
 | Auftragstatus anfragen:
+
 * Storno
 | Alle 20 Minuten
 
@@ -82,7 +84,7 @@ Halte deine Zugangsdaten für beide Systeme bereit.
 Während du die Schnittstelle einrichtest, gibt du deine Zugangsdaten ein, um die Verbindung herzustellen.
 
 Außerdem wirst du deine SPoCC Barcodes, Verkaufspreise, Kategorien usw. denen in plentymarkets zuordnen.
-Das heißt, falls du dein plentymarkets System noch nicht eingerichtet hast, solltest du folgende Daten erstellen, bevor du fortfährst:
+Falls du dein plentymarkets System noch nicht eingerichtet hast, solltest du deshalb folgende Daten erstellen, bevor du fortfährst:
 
 * xref:warenwirtschaft:lager-einrichten.adoc#[Lager]
 * xref:auftraege:auftragsherkunft.adoc#[Auftragsherkünfte]
@@ -175,9 +177,16 @@ Du gibst also deine Zugangsdaten ein, damit plentymarkets und SPoCC miteinander 
 
 [[table-connection-settings]]
 .Schritt "Verbindung"
-[cols="1,3"]
+[cols="1,2"]
 |===
 |Einstellung |Erläuterung
+
+2+^| *Testmodus*
+
+| *Testmodus*
+| Aktiviere diese Option, um den Austausch zwischen SPoCC und plentymarkets in den Testmodus zu versetzen.
+
+2+^| *Zugangsdaten*
 
 | *Global Stock API Key* +
 (Pflichtfeld)
@@ -201,11 +210,11 @@ Du gibst also deine Zugangsdaten ein, damit plentymarkets und SPoCC miteinander 
 
 | *Channel ID* +
 (Pflichtfeld)
-| Gib die Channel-ID ein, die du von SPoCC erhalten hast.
+| Gib die Zahl *4* ein. Bei SPoCC hat plentymarkets immer diese Channel-ID.
 |===
 
 [#80]
-=== Schritt "Optionen für den Artikelimport"
+=== Schritt "Artikelimport"
 
 In diesem Schritt entscheidest du, wie die Daten, die aus SPoCC kommen, in plentymarkets aussehen sollen.
 Das heißt, wo die Daten in plentymarkets gespeichert werden sollen.
@@ -217,7 +226,8 @@ Das heißt, wo die Daten in plentymarkets gespeichert werden sollen.
 |Einstellung |Erläuterung
 
 | *Vollständiger Artikelimport*
-| Aktiviere diese Option, um einen vollständigen Artikelimport zu aktivieren. Nach dem ersten vollständigen Artikelimport werden nur noch neue und geänderte Artikeldaten importiert. Falls du später irgendwann wieder einen vollständigen Artikelimport benötigst, aktiviere diese Funktion noch einmal und schließe den Assistenten wie gewohnt ab.
+| Aktiviere diese Option, um einen vollständigen Artikelimport zu aktivieren. +
+*_Wichtig:_* Nach dem ersten vollständigen Artikelimport wird diese Option automatisch deaktiviert. Es werden also nur noch neue und geänderte Artikeldaten importiert. Falls du später irgendwann wieder einen vollständigen Artikelimport benötigst, aktiviere diese Funktion noch einmal und schließe den Assistenten wie gewohnt ab.
 
 | *Standardkategorie*
 | Stell dir vor, du hast eine neue SPoCC-Warengruppe erstellt.
@@ -252,9 +262,9 @@ Diese Dropdown-Liste enthält nur die Attribute, die schon in plentymarkets vorh
 |===
 
 [#sales-price-mapping]
-=== Schritt "Verkaufspreise zuordnen"
+=== Schritt "Verkaufspreise"
 
-In SPoCC gibt es drei Preise:
+Bei SPoCC gibt es drei Preise:
 
 * Verkaufspreis
 * Zielpreis
