--- a/docs/de-de/modules/maerkte/pages/belboon.adoc
+++ b/docs/de-de/modules/maerkte/pages/belboon.adoc
@@ -27,7 +27,7 @@ NOTE: Der Elastische Export und die Exportformate werden für den Marktplatz-Exp
 include::partial$plugin-download.adoc[]
 
 [#200]
-== Das Format ElasticExportBelboonDE-Plugin in plentymarkets einrichten
+=== Das Format ElasticExportBelboonDE-Plugin in plentymarkets einrichten
 
 :export-format: ElasticExportBelboonDE-Plugin
 :price-search-engine: belboon
@@ -47,7 +47,7 @@ include::partial$plugin-download.adoc[]
 include::partial$exportformate.adoc[]
 
 [#300]
-== Verfügbare Spalten der Exportdatei
+=== Verfügbare Spalten der Exportdatei
 
 :export-format: ElasticExportBelboonDE-Plugin
 
