--- a/docs/en-gb/modules/markets/pages/belboon.adoc
+++ b/docs/en-gb/modules/markets/pages/belboon.adoc
@@ -27,7 +27,7 @@ NOTE: No new features are planned for the Elastic Export and the export formats.
 include::partial$plugin-download.adoc[]
 
 [#200]
-== Setting up the data format ElasticExportBelboonDE-Plugin in plentymarkets
+=== Setting up the data format ElasticExportBelboonDE-Plugin in plentymarkets
 
 :export-format: ElasticExportBelboonDE-Plugin
 :price-search-engine: belboon
@@ -47,7 +47,7 @@ include::partial$plugin-download.adoc[]
 include::partial$export-formats.adoc[]
 
 [#300]
-== Available columns for the export file
+=== Available columns for the export file
 
 :export-format: ElasticExportBelboonDE-Plugin
 
