--- a/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
@@ -36,15 +36,21 @@ Bei manuell angelegten Aufträgen wird keine automatische E-Mail, z.B. als Auftr
 
 Im Menü *CRM » Kontakte* legst du einen neuen Auftrag wie unten beschrieben über die Kontaktdaten an.
 
+[NOTE]
+.Vorgehensweise für Auftragsanlage ist veraltet
+======
+Auf dieser Seite wird die Auftragsanlage über das Menü *Aufträge » Aufträge bearbeiten* beschrieben. Diese Vorgehensweise wird nur noch für kurze Zeit zur Verfügung stehen. Wir empfehlen dir daher, die Auftragsanlage über die neue Auftrags-UI im Menü *Aufträge » Aufträge (Testphase)* zu nutzen. Weitere Informationen dazu findest du auf der Seite xref:auftraege:manually-create-orders.adoc[Aufträge manuell anlegen].
+======
+
 [.instruction]
 Auftrag über Kontakt anlegen:
 
 . Öffne das Menü *CRM » Kontakte*.
 . Suche den Kontakt anhand der Filtereinstellungen. Beachte dazu die Erläuterungen zu den Filtern auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen]. +
 → Die Kontakte, die den Suchkriterien entsprechen, werden angezeigt.
-. Klicke in der Zeile des Kontakts ganz links auf material:more_vert[]. +
+. Klicke rechts in der Zeile des Kontakts auf material:more_vert[]. +
 → Eine Auswahl der verfügbaren Optionen wird geöffnet.
-. Navigiere zu material:shopping_cart[] *Aufträge* > *Neuer Auftrag*. +
+. Navigiere zu material:shopping_cart[] *Aufträge* > *Neuer Auftrag [deprecated]*. +
 → Das Tab *Neuer Auftrag* im Menü *Aufträge » Aufträge bearbeiten* wird geöffnet.
 . Klicke auf *Suchen* (icon:search[role="blue"]), um eine Liste aller verfügbaren Artikel anzuzeigen, oder suche mithilfe der Suchfelder nach der *Artikel-ID* oder weiteren *Artikeldaten*.
 . Wähle die Artikel und die entsprechenden Mengen, die du zum Auftrag hinzufügen möchtest.
