--- a/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
@@ -35,7 +35,7 @@ Auftrag über Kontakt anlegen:
 → Die Kontakte, die den Suchkriterien entsprechen, werden angezeigt.
 . Klicke rechts in der Zeile des Kontakts auf die weiteren Optionen (material:more_vert[]). +
 → Eine Auswahl der verfügbaren Optionen wird geöffnet.
-. Wähle die Option material:shopping_cart[] *Aufträge* > *Neuer Auftrag [Beta]*. +
+. Wähle die Option material:shopping_cart[] *Aufträge* > *Neuer Auftrag*. +
 → Die Übersicht zur Anlage eines neuen Auftrags wird geöffnet.
 . Wähle die Artikel und die entsprechenden Mengen, die du zum Auftrag hinzufügen möchtest.
 . *Speichere* (material:save[]) die Einstellungen. +
@@ -202,8 +202,8 @@ Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt w
 |Wähle die Vorlage des Auftrags aus der Dropdown-Liste.
 
 | *Kontakt*
-|Wähle den Kontakt des Auftrags. Gib mindestens 3 Buschstaben ein, um Vorschläge zu sehen. Alle am Kontakt hinterlegten Daten werden automatisch hinzugefügt. +
-*_Tipp:_* Möchtest du einen Auftrag als Gast anlegen, wähle keinen Kontakt aus und füge stattdessen eine neue *Rechnungsadresse* bzw. eine neue *Lieferadresse* hinzu.
+|Wenn du den Auftrag über das Menü *CRM » Kontakte* anlegst, ist hier der Name des Kontakts bereits vorausgewählt. Möchtest du einen anderen Kontakt wählen, gib mindestens 3 Buschstaben ein, um Vorschläge zu sehen. Alternativ kannst du auch die E-Mail-Adresse des Kontakts eingeben. Alle am Kontakt hinterlegten Daten werden automatisch in die anderen Felder eingefügt. +
+*_Tipp:_* Möchtest du einen Auftrag als Gast anlegen, wähle die Option *Gast* aus der Dropdown-Liste und füge im Anschluss eine neue *Rechnungsadresse* sowie eine neue *Lieferadresse* hinzu.
 
 2+^| *Auftragsdetails*
 
