--- a/docs/en-gb/modules/data/pages/formatdesigner-attributes.adoc
+++ b/docs/en-gb/modules/data/pages/formatdesigner-attributes.adoc
@@ -53,7 +53,8 @@ Use the *attribute* format to export item attributes.
 |Attribute of the market Otto linked to this attribute.
 
 |pixmaniaAttribute
-|Attribute of the market Pixmania linked to this attribute.
+| *_Note:_* This setting has no function, as the market PIXmania no longer exists. +
+Attribute of the market Pixmania linked to this attribute.
 
 |position
 |Position
