--- a/docs/en-gb/modules/data/pages/formatdesigner-manufacturers.adoc
+++ b/docs/en-gb/modules/data/pages/formatdesigner-manufacturers.adoc
@@ -71,7 +71,7 @@ include::item:partial$neckermann.adoc[]
 include::item:partial$telephone-number.adoc[]
 
 | *pixmaniaBrandId*
-|
+| *_Note:_* This setting has no function, as the market PIXmania no longer exists.
 include::item:partial$pixmania.adoc[]
 
 | *position*
