--- a/docs/en-gb/modules/item/pages/manufacturers.adoc
+++ b/docs/en-gb/modules/item/pages/manufacturers.adoc
@@ -113,7 +113,7 @@ include::partial$fax-number.adoc[]
 include::partial$email.adoc[]
 
 | *PIXmania ID*
-|
+| *_Note:_* This setting has no function, as the market PIXmania no longer exists.
 include::partial$pixmania.adoc[]
 
 | *Neckermann.de Enterprise ID*
