--- a/docs/de-de/modules/externe-webshops/pages/spocc.adoc
+++ b/docs/de-de/modules/externe-webshops/pages/spocc.adoc
@@ -251,7 +251,7 @@ Wähle das Attribut aus der Dropdown-Liste.
 *_Voraussetzung_*: Hast du schon xref:artikel:attribute.adoc#[Attribute in plentymarkets konfiguriert]?
 Diese Dropdown-Liste enthält nur die Attribute, die schon in plentymarkets vorhanden sind.
 
-| Attribute: *Größe*
+| Attribute: *Größenattribut*
 | Welches plentymarkets Attribut passt zu deiner SPoCC-Größe?
 Wähle das Attribut aus der Dropdown-Liste.
 
